Minor fixes to promotions vignette

--- a/vignettes/Promotion.Rmd
+++ b/vignettes/Promotion.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-This document was developed during *ozunconf19* and *numbat hackathon 2020*, to provide tools and ideas that will help gather the information required to apply for *academic promotion*. It was updated by Rob Hyndman in December 2025 to work with the `spiderorchid` package.
+This document was developed during *ozunconf19* and *numbat hackathon 2020*, to provide tools and ideas that will help gather the information required to apply for academic promotion. It was updated by Rob Hyndman in December 2025 to work with the `spiderorchid` package.
 
 Typically, an application for academic promotion will require you to provide evidence of your performance in Research, Teaching, Engagement and (for senior appointments) Leadership. The rest of this document summarises what sort of things you could include in each of these sections.
 
@@ -97,9 +97,11 @@ mypubs |>
   arrange(desc(citations))
 ```
 
+Journal rankings can be obtained using the `journal_ranking()` function, or via the [Journal Ranking Shiny App](https://ebsmonash.shinyapps.io/Journal_Rankings/). 
+
 The `scholar` package provides tools for obtaining your profile information, such as total citations, h-index, and lists of co-authors.
 
-```{r scholarprofile}
+```{r scholarprofile, eval = FALSE}
 scholar::get_profile("miNl6rMAAAAJ")
 ```
 
